--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,116 +1,145 @@
 :root {
-    --background-color: white;
-    /* Light mode background */
-    --text-color: rgb(6, 7, 36);
-    /* Light mode text color */
-    --headerColor: #0c113be5;
-    --headerColor2: #f2c038f5;
+  --background-color: white;
+  /* Light mode background */
+  --text-color: rgb(6, 7, 36);
+  /* Light mode text color */
+  --headerColor: #0c113be5;
+  --headerColor2: #f2c038f5;
 }
 
 
 /* Define scrollbar styles */
 ::-webkit-scrollbar {
-    width: 12px;
-  }
-  
-  /* Define scrollbar track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  
-  /* Define scrollbar thumb */
-  ::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 6px;
-  }
-  
-  /* Define scrollbar thumb on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
-  
+  width: 12px;
+}
+
+/* Define scrollbar track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Define scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 6px;
+}
+
+/* Define scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 body {
-    background-color: var(--background-color);
-    color: var(--text-color);
-    transition: background-color 0.3s, color 0.3s;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  transition: background-color 0.3s, color 0.3s;
 
-    &.dark {
-        --background-color: rgb(6, 7, 36);
-        /* Dark mode background */
-        --text-color: white;
+  &.dark {
+    --background-color: rgb(6, 7, 36);
+    /* Dark mode background */
+    --text-color: white;
 
-        /* Dark mode text color */
-        header {
-            background-color: var(--headerColor2);
-
-            .logo {
-                .logoText {
-                    color: rgb(17, 16, 16);
-                }
-            }
-        }
-
-        .row {
-            .heroContent {
-                background-color: transparent;
-            }
-
-            .formContent {
-                background-color: transparent;
-                box-shadow: rgba(124, 139, 145, 0.12) 0px 2px 4px 0px, rgba(16, 101, 138, 0.32) 0px 2px 16px 0px;
-
-            }
-        }
-    }
-
+    /* Dark mode text color */
     header {
-        background-color: var(--headerColor);
-        padding-right: 0.5rem;
-        padding-left: 0.5rem;
-        padding-top: 0.2rem;
-        padding-bottom: 0.2rem;
+      background-color: var(--headerColor2);
 
-        .modeBg {
-            display: flex;
-            background-color: aliceblue;
-            width: 2rem;
-            height: 2rem;
-            border-radius: 50%;
-            padding: 5px;
-            outline: none;
-            border: 0;
+      .logo {
+        .logoText {
+          color: rgb(17, 16, 16);
         }
-        .logo {
-            .logoText {
-                color: white;
-                font-size: 1.2rem;
-                font-weight: 700;
-            }
-        }
+      }
     }
 
     .row {
-        .heroContent {
-            background-color:#ffcc30;
-            .author {
-               a{
-                background-color: whitesmoke;
-                padding: 0.2rem;
-                border-radius: 0.5rem;
-                box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-               }
-            }
-        }
+      .heroContent {
+        background-color: transparent;
+      }
 
-        .formContent {
-            background-color: aliceblue;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+      .formContent {
+        background-color: transparent;
+        box-shadow: rgba(124, 139, 145, 0.12) 0px 2px 4px 0px, rgba(16, 101, 138, 0.32) 0px 2px 16px 0px;
 
-            small {
-                color: rgb(255, 94, 0);
-            }
-        }
+      }
     }
+  }
+
+  header {
+    background-color: var(--headerColor);
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+
+    .modeBg {
+      display: flex;
+      background-color: aliceblue;
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      padding: 5px;
+      outline: none;
+      border: 0;
+    }
+
+    .logo {
+      .logoText {
+        color: white;
+        font-size: 1.2rem;
+        font-weight: 700;
+      }
+    }
+  }
+
+  .row {
+    .heroContent {
+      background-color: #ffcc30;
+
+      .author {
+        a {
+          background-color: whitesmoke;
+          padding: 0.2rem;
+          border-radius: 0.5rem;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+        }
+      }
+    }
+
+    .formContent {
+      background-color: aliceblue;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
+      small {
+        color: rgb(255, 94, 0);
+      }
+    }
+  }
+
+  .showInFormData {
+    background: hsla(173, 89%, 70%, 1);
+
+    background: linear-gradient(90deg, hsla(173, 89%, 70%, 1) 0%, hsla(196, 68%, 38%, 1) 100%);
+
+    background: -moz-linear-gradient(90deg, hsla(173, 89%, 70%, 1) 0%, hsla(196, 68%, 38%, 1) 100%);
+
+    background: -webkit-linear-gradient(90deg, hsla(173, 89%, 70%, 1) 0%, hsla(196, 68%, 38%, 1) 100%);
+    transition: background-color 0.3s linear;
+    &:hover{
+      background: rgb(243, 244, 197);
+
+      background: linear-gradient(90deg, rgb(243, 244, 197) 0%, rgb(249, 180, 51) 100%);
+  
+      background: -moz-linear-gradient(90deg, rgb(243, 244, 197) 0%, rgb(249, 180, 51) 100%);
+  
+      background: -webkit-linear-gradient(90deg, rgb(243, 244, 197) 0%, rgb(249, 180, 51) 100%);
+      cursor: pointer;
+    }
+  }
+
+  .elips {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 
@@ -121,12 +150,12 @@ body {
   appearance: none;
   border-radius: 4px;
   border-style: none;
-  box-shadow: rgba(0, 0, 0, .2) 0 3px 1px -2px,rgba(0, 0, 0, .14) 0 2px 2px 0,rgba(0, 0, 0, .12) 0 1px 5px 0;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 1px -2px, rgba(0, 0, 0, .14) 0 2px 2px 0, rgba(0, 0, 0, .12) 0 1px 5px 0;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-flex;
-  font-family: Roboto,sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: .875rem;
   font-weight: 500;
   height: 36px;
@@ -146,7 +175,7 @@ body {
   -webkit-user-select: none;
   touch-action: manipulation;
   vertical-align: middle;
-  will-change: transform,opacity;
+  will-change: transform, opacity;
 }
 
 .button-61:hover {
